Print UI polish based on UX feedback.
1. Refreshed the print UI based on UX redlines.

2. Implemented tap outside cancel for the print job config activity
   which is full-screen but pretends to be a dialog.

Change-Id: I5afc7cd40c696109d70af31536898cfcad91b2ab

--- a/packages/PrintSpooler/res/values/strings.xml
+++ b/packages/PrintSpooler/res/values/strings.xml
@@ -20,10 +20,7 @@
     <string name="app_label">Print Spooler</string>
 
     <!-- Label of the print dialog's print button. [CHAR LIMIT=16] -->
-    <string name="print_button">PRINT</string>
-
-    <!-- Label of the print dialog's cancel button. [CHAR LIMIT=16] -->
-    <string name="cancel_button">CANCEL</string>
+    <string name="print_button">Print</string>
 
     <!-- Label of the destination widget. [CHAR LIMIT=20] -->
     <string name="label_destination">DESTIINATION</string>
